# Proyecto_Hack

./: .gitignore  README.md  pyproject.toml
notebook/: benchmark_industria_notebook.ipynb
output/: benchmark_industria.json  benchmark_industria.parquet
src/: pipeline.py
src/models/: plan_schema.py
src/normalizer/: snake_case_mapper.py
src/parser/: gemini_extractor.py
src/scraper/: claro.py  ecuanet.py  netlife.py
